test(BDD): add heavy BDD ITs based on EPIC/US/Scenario with Gherkin