@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.acme</groupId>
     <artifactId>product-catalog</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <compiler-plugin.version>3.14.1</compiler-plugin.version>
+        <compiler-plugin.version>3.15.0</compiler-plugin.version>
         <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.31.1</quarkus.platform.version>
-        <skipITs>true</skipITs>
+        <quarkus.platform.version>3.31.2</quarkus.platform.version>
         <surefire-plugin.version>3.5.4</surefire-plugin.version>
+        <testcontainers.version>1.21.4</testcontainers.version>
+        <versions-plugin.version>2.21.0</versions-plugin.version>
+        <quarkus-cucumber.version>1.3.0</quarkus-cucumber.version>
+        <cucumber.version>7.34.2</cucumber.version>
     </properties>
 
     <dependencyManagement>
@@ -32,8 +36,11 @@
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <!--artifactId>quarkus-resteasy-jackson</artifactId-->
             <artifactId>quarkus-rest-jackson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client-jackson</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -64,6 +71,52 @@
             <artifactId>quarkus-junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit-mockito</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.cucumber</groupId>
+            <artifactId>quarkus-cucumber</artifactId>
+            <version>${quarkus-cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit-platform-engine</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -91,95 +144,99 @@
                     <parameters>true</parameters>
                 </configuration>
             </plugin>
-                        <!-- Surefire / Tests -->
+
+            <!-- Surefire / Tests -->
             <plugin>
-    <artifactId>maven-surefire-plugin</artifactId>
-    <version>${surefire-plugin.version}</version>
-    <configuration>
-        <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-        <systemPropertyVariables>
-            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-            <maven.home>${maven.home}</maven.home>
-        </systemPropertyVariables>
-    </configuration>
-</plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                    @{argLine}
+                    -XX:+EnableDynamicAgentLoading
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                    <systemPropertyVariables>
+                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                        <maven.home>${maven.home}</maven.home>
+                    </systemPropertyVariables>
+                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+                </configuration>
+            </plugin>
 
 
             <!-- Failsafe / Integration Tests -->
-<plugin>
-    <artifactId>maven-failsafe-plugin</artifactId>
-    <version>${surefire-plugin.version}</version>
-    <executions>
-        <execution>
-            <goals>
-                <goal>integration-test</goal>
-                <goal>verify</goal>
-            </goals>
-        </execution>
-    </executions>
-    <configuration>
-        <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-        <systemPropertyVariables>
-            <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
-            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-            <maven.home>${maven.home}</maven.home>
-        </systemPropertyVariables>
-    </configuration>
-</plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${surefire-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <argLine>
+                    @{argLine}
+                    -XX:+EnableDynamicAgentLoading
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                    <systemPropertyVariables>
+                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
+                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                        <maven.home>${maven.home}</maven.home>
+                    </systemPropertyVariables>
+                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+                </configuration>
+            </plugin>
+
+            <!-- Versions plugin: use organization rules.xml for dependency update rules -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>${versions-plugin.version}</version>
+                <configuration>
+                    <rulesUri>https://bruno.univ-tln.fr/rules.xml</rulesUri>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
 
 
-<profiles>
-<!-- Profil JVM -->
-<profile>
-    <id>jvm</id>
-    <properties>
-        <quarkus.package.jar.type>fast-jar</quarkus.package.jar.type>
-
-        <quarkus.container-image.build>true</quarkus.container-image.build>
-        <quarkus.container-image.load>true</quarkus.container-image.load>
-
-        <quarkus.container-image.group>bruno</quarkus.container-image.group>
-        <quarkus.container-image.name>product-catalog</quarkus.container-image.name>
-        <quarkus.container-image.tag>1.0.0-jvm</quarkus.container-image.tag>
-
-        <quarkus.docker.dockerfile-jvm-path>src/main/docker/Dockerfile.jvm</quarkus.docker.dockerfile-jvm-path>
-    </properties>
-</profile>
-
-<!-- Profil Natif -->
-  <profile>
-    <id>native</id>
-    <properties>
-      <quarkus.native.enabled>true</quarkus.native.enabled>
-      <quarkus.native.container-build>true</quarkus.native.container-build>
-      <quarkus.container-image.build>true</quarkus.container-image.build>
-      <quarkus.container-image.load>true</quarkus.container-image.load>
-      <quarkus.container-image.push>false</quarkus.container-image.push>
-      <quarkus.container-image.group>bruno</quarkus.container-image.group>
-      <quarkus.container-image.name>product-catalog</quarkus.container-image.name>
-      <quarkus.container-image.tag>1.0.0-native</quarkus.container-image.tag>
-    </properties>
-  </profile>
-
-</profiles>
-
-
-    <!--profiles>
+    <profiles>
+        <!-- Profil JVM -->
         <profile>
-            <id>native</id>
-            <activation>
-                <property>
-                    <name>native</name>
-                </property>
-            </activation>
+            <id>jvm</id>
             <properties>
-                <quarkus.package.jar.enabled>false</quarkus.package.jar.enabled>
-                <skipITs>false</skipITs>
-                <quarkus.native.enabled>true</quarkus.native.enabled>
+                <quarkus.package.jar.type>fast-jar</quarkus.package.jar.type>
+
+                <quarkus.container-image.build>true</quarkus.container-image.build>
+                <quarkus.container-image.load>true</quarkus.container-image.load>
+
+                <quarkus.container-image.group>bruno</quarkus.container-image.group>
+                <quarkus.container-image.name>product-catalog</quarkus.container-image.name>
+                <quarkus.container-image.tag>1.0.0-jvm</quarkus.container-image.tag>
+
+                <quarkus.docker.dockerfile-jvm-path>src/main/docker/Dockerfile.jvm</quarkus.docker.dockerfile-jvm-path>
             </properties>
         </profile>
-    </profiles-->
+
+        <!-- Profil Natif -->
+        <profile>
+            <id>native</id>
+            <properties>
+                <quarkus.native.enabled>true</quarkus.native.enabled>
+                <quarkus.native.container-build>true</quarkus.native.container-build>
+                <quarkus.container-image.build>true</quarkus.container-image.build>
+                <quarkus.container-image.load>true</quarkus.container-image.load>
+                <quarkus.container-image.push>false</quarkus.container-image.push>
+                <quarkus.container-image.group>bruno</quarkus.container-image.group>
+                <quarkus.container-image.name>product-catalog</quarkus.container-image.name>
+                <quarkus.container-image.tag>1.0.0-native</quarkus.container-image.tag>
+            </properties>
+        </profile>
+
+    </profiles>
 </project>
